# systemy

./: pyproject.toml  setup.py
doc/source/: conf.py  index.rst  systemy.rst
systemy/: __init__.py  model_instance.py  system.py
tests/: test_api.py  test_filter.py  test_instance_of.py  test_setup.py  test_storedproperty.py  test_yaml.py
